add more components and css classes

--- a/src/app/pages/customers/customers.component.html
+++ b/src/app/pages/customers/customers.component.html
@@ -1,2 +1,5 @@
-<p>customers works!</p>
+<section id="customers" class="container">
+    Cadastro de clientes
+    <app-customers-list></app-customers-list>
+</section>
 
