--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer>
+    <hr>
+    <section id="footer-info" class="container">
+        <p class="fs-6 fw-lighter">Esse site é melhor visualizado no Netscape browser</p>
+    </section>
+</footer>
+
+
