--- a/src/app/pages/customers/customers.component.html
+++ b/src/app/pages/customers/customers.component.html
@@ -1,5 +1,5 @@
 <section id="customers" class="container">
-    Cadastro de clientes
+    <h2>Cadastro de clientes</h2>
     <app-customers-list></app-customers-list>
 </section>
 
