--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,10 +3,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a [routerLink]="['/home']" class="nav-link">Home</a>
+            <a [routerLink]="['/home']" [routerLinkActive]="['active']" class="nav-link btn btn-light">Home</a>
           </li>
           <li class="nav-item">
-            <a [routerLink]="['/customers']" class="nav-link">Customers</a>
+            <a [routerLink]="['/customers']" [routerLinkActive]="['active']" class="nav-link btn btn-light">Customers</a>
           </li>
         </ul>
       </div>
